# riff-hero

./: CMakeLists.txt  README.md
assets/: notes.chart  shader_fundo.fsh  shader_notas.fsh  shader_notas.vsh
src/: main.cpp
